# evidence-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  architecture.md  fda-requirements.md  integration-neovax.md  market-research.md
examples/: full_review.py  neoantigen_validation.py  quick_start.py
src/evidence_ai/: __init__.py  client.py  config.py  main.py
src/evidence_ai/api/: __init__.py  deps.py  routes.py  schemas.py
src/evidence_ai/augment/: __init__.py  models.py  synth.py
src/evidence_ai/db/: database.py  models.py
src/evidence_ai/extract/: __init__.py  models.py  outcomes.py  pico.py
src/evidence_ai/ingest/: __init__.py  clinicaltrials.py  fda.py  models.py  pubmed.py
src/evidence_ai/summarize/: __init__.py  models.py  narrative.py  regulatory.py
src/evidence_ai/triangulate/: __init__.py  engine.py  matching.py  models.py  prompts.py
tests/: conftest.py
tests/test_extract/: __init__.py  test_pico.py
tests/test_ingest/: __init__.py  test_pubmed.py
tests/test_triangulate/: __init__.py  test_engine.py
